# simple-python-project

./: .buildinfo  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  LICENSE  README.html  README.rst  REUSE.toml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tox.ini  toxfile.py
.github/workflows/: ci.yml  containers.yml  coverage.yml  diagrams.yml  packaging.yml  pylint.yml  sphinx.yml  wheels.yml
_sources/: README.rst.txt
_sources/api/: simple.rst.txt
_sources/ds/: reqs_tree.md.txt  sw_design.md.txt  unit_tests.md.txt
_static/: documentation_options.js
api/: modules.html  simple.html
dev/: generate-changelog.html  pre-commit-config.html  pre-commit-usage.html
docs/: process_md_urls.py  sphinx_prep.sh
docs/source/: conf.py  index.rst
docs/source/ds/: .gitignore
docs/swd/: .doorstop.yml  SDD001.md
ds/: reqs_tree.html  sw_design.html  unit_tests.html
reqs/: .doorstop.yml  REQ001.yml
src/ds2mermaid/: __init__.py
src/simple/: __init__.py
tests/: test_helpers.py
tests/docs/: .doorstop.yml  TST001.yml
